--- a/index.html
+++ b/index.html
@@ -1,126 +1,70 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Python 在线运行器</title>
-  <link rel="icon" href="https://cdn.jsdelivr.net/gh/python/cpython/Doc/logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Python 在线运行结果</title>
   <style>
     body {
-      font-family: "JetBrains Mono", Consolas, monospace;
       background-color: #0d1117;
       color: #c9d1d9;
+      font-family: Consolas, "JetBrains Mono", monospace;
       margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
+      padding: 20px;
     }
-    header {
-      background-color: #161b22;
-      padding: 10px 20px;
-      font-size: 18px;
-      font-weight: bold;
-      text-align: center;
+    h2 {
       color: #58a6ff;
-      border-bottom: 1px solid #30363d;
-    }
-    textarea {
-      flex: 1;
-      width: 100%;
-      resize: none;
-      background-color: #0d1117;
-      color: #c9d1d9;
-      border: none;
-      padding: 12px;
-      font-size: 15px;
-      line-height: 1.4;
-      outline: none;
+      text-align: center;
     }
     #output {
       background-color: #161b22;
-      height: 35%;
-      overflow-y: auto;
-      border-top: 1px solid #30363d;
-      padding: 10px;
-      font-size: 14px;
+      border: 1px solid #30363d;
+      border-radius: 10px;
+      padding: 12px;
       white-space: pre-wrap;
+      font-size: 15px;
+      line-height: 1.5;
     }
-    button {
-      background-color: #238636;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      padding: 8px 14px;
-      margin: 8px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-    button:hover {
-      background-color: #2ea043;
-    }
-    #toolbar {
-      background-color: #161b22;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-bottom: 1px solid #30363d;
+    .loading {
+      color: #999;
+      text-align: center;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
-  <header>🐍 Python 在线运行器（Pyodide版）</header>
-  <div id="toolbar">
-    <button id="runBtn">▶️ 运行</button>
-    <button id="clearBtn">🧹 清空输出</button>
-    <button id="exampleBtn">💡 示例</button>
-  </div>
-
-  <textarea id="code" spellcheck="false">print("你好，世界！")
-for i in range(3):
-    print("Python运行成功 ✅", i+1)</textarea>
-  
-  <div id="output"></div>
+  <h2>🐍 Python 在线运行结果</h2>
+  <div id="output" class="loading">⏳ 正在加载 Python 环境...</div>
 
   <script src="https://cdn.jsdelivr.net/pyodide/v0.25.0/full/pyodide.js"></script>
   <script>
-    const outputDiv = document.getElementById("output");
-    const codeArea = document.getElementById("code");
-
-    function printOutput(text) {
-      outputDiv.textContent += text + "\\n";
-      outputDiv.scrollTop = outputDiv.scrollHeight;
-    }
-
     async function main() {
-      printOutput("⏳ 正在加载 Pyodide，请稍候...");
-      window.pyodide = await loadPyodide({indexURL: "https://cdn.jsdelivr.net/pyodide/v0.25.0/full/"});
-      printOutput("✅ Pyodide 已加载成功，可以运行 Python 代码啦！");
+      const outputDiv = document.getElementById("output");
+      function print(text) {
+        outputDiv.textContent += text + "\\n";
+        outputDiv.scrollTop = outputDiv.scrollHeight;
+      }
+
+      try {
+        // 加载 Pyodide
+        const pyodide = await loadPyodide({ indexURL: "https://cdn.jsdelivr.net/pyodide/v0.25.0/full/" });
+        outputDiv.textContent = "✅ Python 环境加载成功，正在运行程序...\n\n";
+
+        // 这里写要自动运行的 Python 代码 ↓↓↓
+        const code = `
+print("你好，世界 🌏")
+print("Python 已在微信中自动运行 ✅")
+for i in range(3):
+    print("第", i+1, "次问候：祝你今天好心情 ❤️")
+`;
+        // 执行
+        let result = await pyodide.runPythonAsync(code);
+        if (result !== undefined) print(result.toString());
+      } catch (err) {
+        outputDiv.textContent = "❌ 出错啦：" + err;
+      }
     }
     main();
-
-    document.getElementById("runBtn").onclick = async () => {
-      const code = codeArea.value;
-      try {
-        let result = await pyodide.runPythonAsync(code);
-        if (result !== undefined) printOutput(result.toString());
-      } catch (err) {
-        printOutput("❌ 错误：" + err);
-      }
-    };
-
-    document.getElementById("clearBtn").onclick = () => outputDiv.textContent = "";
-    
-    document.getElementById("exampleBtn").onclick = () => {
-      codeArea.value = `# 示例：打印心形图案
-for y in range(15, -15, -1):
-    row = ''
-    for x in range(-30, 30):
-        row += '❤' if ((x*0.05)**2 + (y*0.1)**2 - 1)**3 - (x*0.05)**2*(y*0.1)**3 <= 0 else ' '
-    print(row)
-`;
-    };
   </script>
 </body>
 </html>
